# CMakeStarter

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  CMakeStarter.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
CMakeStarter/: Box.cpp  Box.h  CMakeLists.txt  CMakeStarter.cpp  CMakeStarter.h  CMakeStarter.sln  CMakeStarter.vcxproj  DoubleLink.cpp  DoubleLink.h  DoubleList.cpp  DoubleList.h  IList.cpp  IList.h  Link.cpp  Link.h  ListManager.cpp  ListManager.h  Project.sln  SingleList.cpp  SingleList.h  cmake_install.cmake  global.cpp  global.h  resource.h
